--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,17 @@ scipy
 xarray
 vtk
 PySide6-essentials
-# pyqtgraph
+pyqtgraph
 requests
-# netCDF4
-# fpdf2
-# pdfrw
+netCDF4
+fpdf2
+pdfrw
 Pillow
 PyYAML  #yaml
 matplotlib
 rapidfuzz
 PySide6-QtAds
-# wavespectra
-# waveresponse
-# mafredo
+wavespectra
+waveresponse
+mafredo
 nooverlap
